# nexsight

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
frontend/: next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: GPUCard.tsx
frontend/src/lib/: websocket.ts
nexsight/: __init__.py  cli.py
nexsight/core/: __init__.py  gpu.py
nexsight/server/: __init__.py  app.py
nexsight/webui/static/: 404.html  _events.json  index.html  index.txt  trace
nexsight/webui/static/_next/static/chunks/: 452-4e28d095128d3db0.js  cfeffc86-f2ef40c30b0f1f23.js  main-app-3ef8faaf3bda980d.js  main-ef77deac2ccf0b64.js  webpack-8a6e35c6ca5f0758.js
nexsight/webui/static/_next/static/chunks/app/: _not-found-0efd97ffc6e0c12c.js  layout-a2f805cdde49f00d.js  page-edc2c78ad44e4dc7.js
nexsight/webui/static/_next/static/chunks/pages/: _app-e474697bd5d7c030.js  _error-bdf92bfa8c16b4e8.js
nexsight/webui/static/_next/static/css/: 7446099e3dcc102f.css
nexsight/webui/static/_next/static/qZJdhrCOeBNl7JYe_whyZ/: _buildManifest.js
src/: lib.rs
