[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexsight"
version = "0.1.0"
description = "Real-time GPU Intelligence for AI Teams"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "NexSight", email = "hello@nexsight.top"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]