[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexsight"
version = "0.1.0"
description = "Real-time GPU Intelligence for AI Teams"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "NexSight", email = "hello@nexsight.top"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "nvidia-ml-py3>=7.352.0",
    "websockets>=12.0",
    "psutil>=5.9.0",
]

[project.scripts]
nexsight = "nexsight.cli:app"